--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "86aaed82977598c1",
+        "id": "a7dc7a7942665d99",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -12,20 +12,7 @@
             "file": "obj.md",
             "mode": "source"
           }
-        },
-        "group": "bef2cdad262ad937"
-      },
-      {
-        "id": "b275de063c96dddd",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "obj.md",
-            "mode": "preview"
-          }
-        },
-        "group": "bef2cdad262ad937"
+        }
       }
     ],
     "direction": "vertical"
@@ -65,7 +52,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "right": {
     "id": "1400b278256734f4",
@@ -111,7 +99,7 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b275de063c96dddd",
+  "active": "a7dc7a7942665d99",
   "lastOpenFiles": [
     "obj.md",
     "xxx.md",
